--- a/style.css
+++ b/style.css
@@ -22,10 +22,11 @@ body {
   min-height: 100vh;
   margin: 0;
   position: relative;
+  overflow-x: hidden;
 }
 
 header {
-  height: 35vh;
+  min-height: 35vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -97,7 +98,7 @@ header {
 }
 
 main {
-  height: 65vh;
+  min-height: 65vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -124,6 +125,7 @@ main {
       flex-direction: column;
       position: relative;
       word-break: break-word;
+      gap: 7px;
 
       p {
         font-weight: 700;
@@ -167,9 +169,9 @@ main {
 }
 
 @media (max-width: 768px) {
-  body {
+  /* body {
     overflow-x: hidden;
-  }
+  } */
   header {
     height: 35vh;
     h1 {
